@@ -1,6 +1,7 @@
 1.4
 - map names are now extracted from IWAD file instead of guessing them from IWAD name
 - confirmation dialog before preset is deleted
+- keyboard control (Enter, Insert, Delete, CTRL+arrows)
 
 1.3.3
 - fixed deh recognition for map packs
